[gd_scene load_steps=15 format=3 uid="uid://4hweh6qgoxhe"]

[ext_resource type="FontFile" uid="uid://ctggjw85h5sy3" path="res://Assets/Fonts/DancingScript-Variable.ttf" id="1_2kngc"]
[ext_resource type="Script" path="res://Scripts/mainmenu.gd" id="1_pwed1"]
[ext_resource type="Texture2D" uid="uid://b7nwn201y6obl" path="res://Assets/Sprites/menubg.png" id="2_h7kox"]
[ext_resource type="AudioStream" uid="uid://copdourj3kl7c" path="res://Assets/Audio/menu_press.mp3" id="4_quhiw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hanpn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ytnki"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wgw5"]
bg_color = Color(0.0507343, 0.203617, 0.281323, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wa7pr"]
bg_color = Color(0.0231398, 0.130372, 0.186118, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2lv6"]
bg_color = Color(0.0634237, 0.234287, 0.321162, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ywt5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1oagv"]
bg_color = Color(0.0507343, 0.203617, 0.281323, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cnyru"]
bg_color = Color(0.0231398, 0.130372, 0.186118, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6pnjt"]
bg_color = Color(0.0634237, 0.234287, 0.321162, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dgw6m"]

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pwed1")

[node name="start_menu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="TextureRect" parent="start_menu"]
modulate = Color(0.233925, 0.233925, 0.233925, 1)
material = SubResource("ShaderMaterial_hanpn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h7kox")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="start_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -162.0
offset_right = 195.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="start" type="Button" parent="start_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_2kngc")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_ytnki")
theme_override_styles/hover = SubResource("StyleBoxFlat_6wgw5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wa7pr")
theme_override_styles/normal = SubResource("StyleBoxFlat_o2lv6")
text = "Start"

[node name="options" type="Button" parent="start_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_2kngc")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_ytnki")
theme_override_styles/hover = SubResource("StyleBoxFlat_6wgw5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wa7pr")
theme_override_styles/normal = SubResource("StyleBoxFlat_o2lv6")
text = "Options"

[node name="leave" type="Button" parent="start_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_2kngc")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_ytnki")
theme_override_styles/hover = SubResource("StyleBoxFlat_6wgw5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wa7pr")
theme_override_styles/normal = SubResource("StyleBoxFlat_o2lv6")
text = "Leave"

[node name="options_menu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="TextureRect" parent="options_menu"]
modulate = Color(0.233925, 0.233925, 0.233925, 1)
material = SubResource("ShaderMaterial_hanpn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h7kox")
expand_mode = 1
stretch_mode = 6

[node name="volume_slider" type="HSlider" parent="options_menu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 14.0
offset_top = 170.0
offset_right = 268.0
offset_bottom = 212.0
max_value = 2.0
step = 0.01
value = 1.0

[node name="apply" type="Button" parent="options_menu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 964.0
offset_top = 541.0
offset_right = 1115.0
offset_bottom = 613.0
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_2kngc")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_8ywt5")
theme_override_styles/hover = SubResource("StyleBoxFlat_1oagv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cnyru")
theme_override_styles/normal = SubResource("StyleBoxFlat_6pnjt")
text = "Apply"

[node name="back" type="Button" parent="options_menu"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 166.0
offset_bottom = 87.0
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_2kngc")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_8ywt5")
theme_override_styles/hover = SubResource("StyleBoxFlat_1oagv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cnyru")
theme_override_styles/normal = SubResource("StyleBoxFlat_6pnjt")
text = "Back"

[node name="volume" type="Label" parent="options_menu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 279.0
offset_top = 171.0
offset_right = 476.0
offset_bottom = 213.0
theme_override_font_sizes/font_size = 24
text = "100%"
vertical_alignment = 1

[node name="fullscreen_check" type="CheckBox" parent="options_menu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 17.0
offset_top = 234.0
offset_right = 122.0
offset_bottom = 276.0
scale = Vector2(2.24, 2.2)
theme_override_styles/focus = SubResource("StyleBoxEmpty_dgw6m")
text = "fullscreen"

[node name="SFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_quhiw")

[connection signal="pressed" from="start_menu/VBoxContainer/start" to="." method="start"]
[connection signal="pressed" from="start_menu/VBoxContainer/options" to="." method="options"]
[connection signal="pressed" from="start_menu/VBoxContainer/leave" to="." method="leave"]
[connection signal="drag_ended" from="options_menu/volume_slider" to="." method="volume_set"]
[connection signal="value_changed" from="options_menu/volume_slider" to="." method="volume_changing"]
[connection signal="pressed" from="options_menu/apply" to="." method="apply"]
[connection signal="pressed" from="options_menu/back" to="." method="back"]
[connection signal="toggled" from="options_menu/fullscreen_check" to="." method="fullscreen_on"]
